fixed menu spacing

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -10,7 +10,7 @@
 }
 
 #sidebar-wrapper {
-    margin-left: -150px;
+    margin-left: -160px;
     left: 70px;
     width: 150px;
     background: #222;
